--- a/SudokuRecognizerLib/pom.xml
+++ b/SudokuRecognizerLib/pom.xml
@@ -7,7 +7,7 @@
     <groupId>pl.sudokusolver</groupId>
     <artifactId>sudokurecognizerlib</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,6 +27,8 @@
             <artifactId>guava</artifactId>
             <version>16.0.1</version>
         </dependency>
+
+        <!--Test dependency-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -54,19 +56,18 @@
         </dependency>
     </dependencies>
 
-
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
             </plugin>
+
             <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
             </plugin>
-
 
             <!-- Maven Assembly Plugin -->
             <plugin>
@@ -91,9 +92,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
-
-
 </project>
