Maven multi modules support
- Create web modul with submodules: recognizerlib and server

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .idea/
-SudokuRecognizerLib/.idea/
-SudokuRecognizerLib/target/
-Server/.idea/
-Server/target/
+Web/RecognizerLib/target/
+Web/Server/target/
+Web/.idea/
 
