--- a/Web/Server/pom.xml
+++ b/Web/Server/pom.xml
@@ -62,6 +62,13 @@
             <version>1.4</version>
         </dependency>
 
+        <!-- Log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
         <dependency>
             <groupId>org.apache.commons</groupId>
