--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -53,7 +53,7 @@
                 <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
+                    <version>3.0.0-M3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
