--- a/Web/Server/pom.xml
+++ b/Web/Server/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0</version>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
@@ -62,12 +62,17 @@
             <version>1.4</version>
         </dependency>
 
-        <!-- Log4j -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
         <dependency>
@@ -117,6 +122,7 @@
                         <path>/</path>
                         <contextReloadable>true</contextReloadable>
                         <ignorePackaging>true</ignorePackaging>
+                        <tomcatLoggingFile>log.txt</tomcatLoggingFile>
                     </configuration>
                 </plugin>
 
