--- a/Web/RecognizerLib/pom.xml
+++ b/Web/RecognizerLib/pom.xml
@@ -12,6 +12,7 @@
     </parent>
 
 	<artifactId>recognizerlib</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     
     <properties>
