--- a/Web/Server/pom.xml
+++ b/Web/Server/pom.xml
@@ -13,7 +13,7 @@
  
     <artifactId>server</artifactId>
     <packaging>war</packaging>
-
+    <version>1.0</version>
     <properties>
         <springVersion>5.1.6.RELEASE</springVersion>
     </properties>
@@ -73,6 +73,11 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
         <dependency>
@@ -99,7 +104,12 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>pl.sudokusolver</groupId>
+            <artifactId>solver</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
