--- a/Web/RecognizerLib/pom.xml
+++ b/Web/RecognizerLib/pom.xml
@@ -37,5 +37,27 @@
             <artifactId>guava</artifactId>
             <version>16.0.1</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.nd4j</groupId>-->
+            <!--<artifactId>nd4j-native-platform</artifactId>-->
+            <!--<version>0.9.1</version>-->
+        <!--</dependency>-->
+         <!--&lt;!&ndash;Core DL4J functionality&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.deeplearning4j</groupId>-->
+            <!--<artifactId>deeplearning4j-core</artifactId>-->
+            <!--<version>0.9.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-simple</artifactId>-->
+            <!--<version>1.7.12</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.deeplearning4j</groupId>-->
+            <!--<artifactId>deeplearning4j-ui_2.10</artifactId>-->
+            <!--<version>0.9.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
