--- a/Web/RecognizerLib/pom.xml
+++ b/Web/RecognizerLib/pom.xml
@@ -38,6 +38,13 @@
             <version>16.0.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
