--- a/Web/Server/pom.xml
+++ b/Web/Server/pom.xml
@@ -15,6 +15,7 @@
     <packaging>war</packaging>
     <version>1.0</version>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springVersion>5.1.6.RELEASE</springVersion>
     </properties>
 
