--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-Prototyp/SudokuSolver/.idea/
-Prototyp/SudokuSolver/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -8,10 +6,15 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .idea/
+
 Web/RecognizerLib/target/
+
 Web/Server/target/
+Web/Server/docker/server/*.war
+
 Web/Solver/target/
 Web/.idea/
+
 App/.idea/
 App/target/
 
