--- a/Web/Server/src/main/resources/config.properties
+++ b/Web/Server/src/main/resources/config.properties
@@ -1,1 +1,2 @@
-openCVUrl=C:\\opencv4.0.1\\opencv\\build\\java\\x64
+openCVUrlWin=C:\\opencv4.0.1\\opencv\\build\\java\\x64
+openCVUrlLinux=/usr/local/lib/
