--- a/App/pom.xml
+++ b/App/pom.xml
@@ -7,7 +7,27 @@
     <groupId>pl.sudokusolver</groupId>
     <artifactId>app</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.1</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.sbrannen</groupId>
+            <artifactId>spring-test-junit5</artifactId>
+            <version>1.4.0</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
     <build>
         <pluginManagement>
             <plugins>
