--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -77,7 +77,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M3</version>
                     <configuration>
-                        <skipTests>true</skipTests>
+                        <!--<skipTests>true</skipTests>-->
                     </configuration>
                 </plugin>
                 <plugin>
