--- a/Web/Server/pom.xml
+++ b/Web/Server/pom.xml
@@ -103,6 +103,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
