--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Data/Dump/CleanGrid/
 Data/Dump/Digit/
 Data/Dump/Result/
 Data/Dump/Cell/
+
+Web/RecognizerLib/src/test/resources/config.properties
+Web/Server/src/main/resources/config.properties
